Simplify unmodifiable list creation (#1646)